# twilio-haskell

./: .editorconfig  .gitignore  .stylish-haskell.yaml  .travis.yml  AUTHORS  AUTHORS.md  Account.hs  CHANGELOG.md  Call.hs  Client.hs  Control-Monad-Twilio.html  LICENSE  README.md  Twilio-APIKey.html  Twilio-APIKeys.html  Twilio-Account.html  Twilio-Accounts.html  Twilio-Address.html  Twilio-Addresses.html  Twilio-Application.html  Twilio-Applications.html  Twilio-AuthorizedConnectApp.html  Twilio-AuthorizedConnectApps.html  Twilio-AvailablePhoneNumber.html  Twilio-AvailablePhoneNumbers.html  Twilio-Call-Feedback.html  Twilio-Call.html  Twilio-Calls-FeedbackSummary.html  Twilio-Calls.html  Twilio-Conference-Participant.html  Twilio-Conference-Participants.html  Twilio-Conference.html  Twilio-Conferences.html  Twilio-ConnectApp.html  Twilio-ConnectApps.html  Twilio-IncomingPhoneNumber.html  Twilio-IncomingPhoneNumbers.html  Twilio-Internal-Parser.html  Twilio-Internal-Request.html  Twilio-Internal-Resource.html  (+137 more)
script/: publish_haddock.sh
src/: Twilio.hs  test.hs
src/Control/Monad/: Twilio.hs
src/Twilio/: APIKey.hs  APIKeys.hs  Account.hs  Accounts.hs  Address.hs  Addresses.hs  Application.hs  Applications.hs  AuthorizedConnectApp.hs  AuthorizedConnectApps.hs  AvailablePhoneNumber.hs  AvailablePhoneNumbers.hs  Call.hs  Calls.hs  Client.hs  Conference.hs  Conferences.hs  ConnectApp.hs  ConnectApps.hs  IncomingPhoneNumber.hs  IncomingPhoneNumbers.hs  Message.hs  Messages.hs  OutgoingCallerID.hs  OutgoingCallerIDs.hs  PhoneNumber.hs  PhoneNumbers.hs  Queue.hs  Queues.hs  Recording.hs  Recordings.hs  ShortCode.hs  ShortCodes.hs  Tokens.hs  Transcription.hs  Transcriptions.hs  Types.hs  Usage.hs  UsageRecord.hs  UsageRecords.hs  (+2 more)
src/Twilio/Call/: Feedback.hs
src/Twilio/Calls/: FeedbackSummary.hs
src/Twilio/Conference/: Participant.hs  Participants.hs
src/Twilio/Internal/: Parser.hs  Request.hs  Resource.hs
src/Twilio/Message/: Feedback.hs  Media.hs  MediaList.hs
src/Twilio/Queue/: Member.hs  Members.hs
src/Twilio/Types/: AddressRequirement.hs  Alpha.hs  AuthToken.hs  Capability.hs  ISOCountryCode.hs  Issue.hs  List.hs  PriceUnit.hs  SID.hs  SID2.hs  SIDs.hs  Sing.hs  TwilioT.hs
src/Twilio/Types/SID/: TH.hs
test/: Test.hs
test/api/: Test.hs
test/unit/: DoesItWorkSpec.hs
test/unit/Twilio/Types/: PriceUnitSpec.hs
