name:                twilio
version:             0.1.3.0
synopsis:            Twilio REST API library for Haskell
description:         This package exports bindings to Twilio's REST API (<https://www.twilio.com/docs/api/rest>). While we would like to have a complete binding to Twilio's REST API, this package is being developed on demand. If you need something that has not been implemented yet, please send a pull request or file an issue on GitHub (<https://github.com/markandrus/twilio-haskell>).
homepage:            https://github.com/markandrus/twilio-haskell
license:             BSD3
license-file:        LICENSE
author:              Mark Andrus Roberts
maintainer:          markandrusroberts@gmail.com
category:            Network APIs, Web
build-type:          Simple
cabal-version:       >=1.8

source-repository head
  type: git
  location: https://github.com/markandrus/twilio-haskell

library
  ghc-options:         -Wall -fno-warn-name-shadowing -O2
  exposed-modules:     Control.Monad.Twilio,
                       Twilio,
                       Twilio.Account,
                       Twilio.Accounts,
                       Twilio.Address,
                       Twilio.Addresses,
                       Twilio.Application,
                       Twilio.Applications,
                       Twilio.AuthorizedConnectApp,
                       Twilio.AuthorizedConnectApps,
                       Twilio.AvailablePhoneNumber,
                       Twilio.AvailablePhoneNumbers,
                       Twilio.Call,
                       Twilio.Call.Feedback,
                       Twilio.Calls,
                       Twilio.Calls.FeedbackSummary,
                       Twilio.Conference,
                       Twilio.Conference.Participant,
                       Twilio.Conference.Participants,
                       Twilio.Conferences,
                       Twilio.ConnectApp,
                       Twilio.ConnectApps,
                       Twilio.IncomingPhoneNumber,
                       Twilio.IncomingPhoneNumbers,
                       Twilio.Internal.Parser,
                       Twilio.Internal.Request,
                       Twilio.Internal.Resource,
                       Twilio.Message,
                       Twilio.Message.Media,
                       Twilio.Message.MediaList,
                       Twilio.Messages,
                       Twilio.OutgoingCallerID,
                       Twilio.OutgoingCallerIDs,
                       Twilio.Queue,
                       Twilio.Queue.Member,
                       Twilio.Queue.Members,
                       Twilio.Queues,
                       Twilio.Recording,
                       Twilio.Recordings,
                       Twilio.Tokens
                       Twilio.Transcription,
                       Twilio.Transcriptions,
                       Twilio.Types,
                       Twilio.Types.AuthToken,
                       Twilio.Types.AddressRequirement,
                       Twilio.Types.Capability,
                       Twilio.Types.ISOCountryCode,
                       Twilio.Types.List,
                       Twilio.Types.SID,
                       Twilio.Types.PriceUnit,
                       Twilio.UsageRecord,
                       Twilio.UsageRecords,
                       Twilio.UsageTrigger,
                       Twilio.UsageTriggers
  other-modules:       Twilio.Types.Issue
  hs-source-dirs:      src
  build-depends:       aeson ==0.*,
                       base ==4.*,
                       bifunctors >= 5 && < 5.1,
                       bytestring ==0.10.*,
                       containers ==0.5.*,
                       errors ==2.0.*,
                       exceptions ==0.*,
                       free ==4.*,
                       http-client ==0.4.*,
                       http-client-tls ==0.2.*,
                       http-types ==0.*,
                       mtl ==2.*,
                       network-uri >=2.6,
                       old-locale ==1.0.*,
                       scientific ==0.*,
                       text ==1.*,
                       time ==1.5.*,
                       transformers ==0.4.*,
                       unordered-containers ==0.2.*

test-suite Tests
  hs-source-dirs:      test
  main-is:             Test.hs
  Type:                exitcode-stdio-1.0
  build-depends:       aeson ==0.*,
                       base ==4.*,
                       bytestring ==0.10.*,
                       Cabal >=1.16.0,
                       http-client ==0.*,
                       http-client-tls ==0.2.*,
                       network-uri >=2.6,
                       text ==1.*,
                       transformers ==0.4.*,
                       twilio
