name:                twilio
version:             0.1.3.1
synopsis:            Twilio REST API library for Haskell
description:         This package exports bindings to Twilio's REST API (<https://www.twilio.com/docs/api/rest>). While we would like to have a complete binding to Twilio's REST API, this package is being developed on demand. If you need something that has not been implemented yet, please send a pull request or file an issue on GitHub (<https://github.com/markandrus/twilio-haskell>).
homepage:            https://github.com/markandrus/twilio-haskell
license:             BSD3
license-file:        LICENSE
author:              Mark Andrus Roberts
maintainer:          markandrusroberts@gmail.com
category:            Network APIs, Web
build-type:          Simple
cabal-version:       >=1.8
tested-with:         GHC == 7.8.4, GHC == 7.10.1, GHC == 7.10.2, GHC == 8.0.1

source-repository head
  type: git
  location: https://github.com/markandrus/twilio-haskell

library
  ghc-options:         -Wall -fno-warn-name-shadowing
  exposed-modules:     Control.Monad.Twilio,
                       Twilio,
                       Twilio.Account,
                       Twilio.Accounts,
                       Twilio.Address,
                       Twilio.Addresses,
                       Twilio.APIKey,
                       Twilio.APIKeys,
                       Twilio.Application,
                       Twilio.Applications,
                       Twilio.AuthorizedConnectApp,
                       Twilio.AuthorizedConnectApps,
                       Twilio.AvailablePhoneNumber,
                       Twilio.AvailablePhoneNumbers,
                       Twilio.Call,
                       Twilio.Call.Feedback,
                       Twilio.Calls,
                       Twilio.Calls.FeedbackSummary,
                       Twilio.Conference,
                       Twilio.Conference.Participant,
                       Twilio.Conference.Participants,
                       Twilio.Conferences,
                       Twilio.ConnectApp,
                       Twilio.ConnectApps,
                       Twilio.IncomingPhoneNumber,
                       Twilio.IncomingPhoneNumbers,
                       Twilio.Internal.Parser,
                       Twilio.Internal.Request,
                       Twilio.Internal.Resource,
                       Twilio.Message,
                       Twilio.Message.Feedback,
                       Twilio.Message.Media,
                       Twilio.Message.MediaList,
                       Twilio.Messages,
                       Twilio.OutgoingCallerID,
                       Twilio.OutgoingCallerIDs,
                       Twilio.Queue,
                       Twilio.Queue.Member,
                       Twilio.Queue.Members,
                       Twilio.Queues,
                       Twilio.Recording,
                       Twilio.Recordings,
                       Twilio.ShortCode,
                       Twilio.ShortCodes,
                       Twilio.Tokens
                       Twilio.Transcription,
                       Twilio.Transcriptions,
                       Twilio.Types,
                       Twilio.Types.AuthToken,
                       Twilio.Types.AddressRequirement,
                       Twilio.Types.Capability,
                       Twilio.Types.ISOCountryCode,
                       Twilio.Types.Issue,
                       Twilio.Types.List,
                       Twilio.Types.SID,
                       Twilio.Types.PriceUnit,
                       Twilio.UsageRecord,
                       Twilio.UsageRecords,
                       Twilio.UsageTrigger,
                       Twilio.UsageTriggers
  hs-source-dirs:      src
  build-depends:       aeson,
                       base,
                       bifunctors,
                       bytestring,
                       containers,
                       errors,
                       exceptions,
                       free,
                       http-client,
                       http-client-tls,
                       http-types,
                       mtl,
                       network-uri,
                       old-locale,
                       scientific,
                       text,
                       time,
                       transformers,
                       unordered-containers

test-suite Tests
  hs-source-dirs:      test
  main-is:             Test.hs
  Type:                exitcode-stdio-1.0
  build-depends:       aeson,
                       base,
                       bytestring,
                       Cabal,
                       http-client,
                       http-client-tls,
                       network-uri,
                       text,
                       transformers,
                       twilio
